# fft-2d

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  report.tex
doc/: docs.ps
report/: report.tex
src/: fft.rs  main.rs
